--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "binny",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "format": "prettier --write \"**/*.ts\"",
+    "lint": "eslint \"**/*.ts\" --fix"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
